--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       </div>
 
       <nav>
-        <a href="/Users/mr_rahmani/Documents/Web Designing /Projet de web/new.html"><b>ACCUEIL</b></a>
+        <a href="index.html"><b>ACCUEIL</b></a>
         <a href="#destinations"><b>DESTINATIONS</b></a>
-        <a href="/Users/mr_rahmani/Documents/Web Designing /Projet de web/contact.html"><b>CONTACT</b></a>        
+        <a href="contact.html"><b>CONTACT</b></a>        
       </nav>
     </header>
     
