--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
         <img src="logo_page.png" alt="Logo de Site de Voyage">
       </div>
       <nav>
-        <a href="file:///info/etu/l1info/a2306200/Documents/HTML/port_web/new.html#Accueil"><b>ACCUEIL</b></a>
-        <a href="file:///info/etu/l1info/a2306200/Documents/HTML/port_web/new.html#destinations"><b>DESTINATIONS</b></a>
-        <a href="/info/etu/l1info/a2306200/Documents/HTML/port_web/contact.html"><b>CONTACT</b></a>        
+        <a href="index.html"><b>ACCUEIL</b></a>
+        <a href="#destinations"><b>DESTINATIONS</b></a>
+        <a href="contact.html"><b>CONTACT</b></a>        
       </nav>
     </header>
 <!-- Partie Generale de Contact -->
