--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,11 @@
         <div class="input-box">
         <input type="text" placeholder="Message "> 
       </div>
-      <button class="login-btn">Envoi Message </button>
+      <div href="envoi-massage">
+        <button class="login-btn">Envoi Message </button>
+
+      </div>
+      
 
     </section>
  </body>
