--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,10 @@
         <div class="input-box">
         <input type="text" placeholder="Message "> 
       </div>
-      <div href="envoi-massage">
+      <a href="envoi-massage">
         <button class="login-btn">Envoi Message </button>
 
-      </div>
+      </a>
       
 
     </section>
