--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,8 @@
         <div class="input-box">
         <input type="text" placeholder="Message "> 
       </div>
-      <a href="envoi-massage">
+      <a href="envoi-message.html"><b>CONTACT</b></a> 
         <button class="login-btn">Envoi Message </button>
-
       </a>
       
 
