--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,7 @@
         <div class="input-box">
         <input type="text" placeholder="Message "> 
       </div>
-      <a href="envoi-message.html"><b>CONTACT</b></a> 
-        <button class="login-btn">Envoi Message </button>
+        <button a href="envoi-message.html" class="login-btn">Envoi Message </button>
       </a>
       
 
