--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,8 @@
         <div class="input-box">
         <input type="text" placeholder="Message "> 
       </div>
-        <button a href="envoi-message.html" class="login-btn">Envoi Message </button>
+      <a href="envoi-message.html"></a>
+        <button class="login-btn">Envoi Message </button>
       </a>
       
 
