--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         <div class="input-box">
         <input type="text" placeholder="Message "> 
       </div>
-      <a href="envoi-message.html"></a>
+      <a href="envoi-message.html">
         <button class="login-btn">Envoi Message </button>
       </a>
       
