--- a/envoi-message.html
+++ b/envoi-message.html
@@ -1,4 +1,4 @@
-<!doctype html>
+!<!doctype html>
 <html lang="en">
 <html>
   <head>
@@ -22,21 +22,7 @@
     </header>
 <!-- Partie Generale de Contact -->
   <section>
-     <h1>Contact nous</h1>
-      <div class="input-box">
-       <input type="text" placeholder="Votre Nom"> 
-      </div>
-      <div class="input-box">
-        <input type="email" placeholder="Votre Email "> 
-      </div>
-        <div class="input-box">
-        <input type="text" placeholder="Message "> 
-      </div>
-      <a href="envoi-message.html">
-        <button class="login-btn">Envoi Message </button>
-      </a>
-      
-
+  <h3> Merci de Votre Message </h3>
     </section>
  </body>
 </html>
