--- a/envoi-message.html
+++ b/envoi-message.html
@@ -20,9 +20,9 @@
         <a href="contact.html"><b>CONTACT</b></a>        
       </nav>
     </header>
-<!-- Partie Generale de Contact -->
+<!-- FIn d eEnvoyer massage  -->
   <section>
-  <h3> Merci de Votre Message </h3>
+  <h3> Merci pour votre message </h3>
     </section>
  </body>
 </html>
