--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
 
       <!-- IMPORTANT: Grid container! -->
       <div class="destinations-grid">
-        
+        <a href="#france-card">
         <div class="card">
           <img src="grece.jpg" alt="Santorin">
           <h3>🇬🇷 Grèce </h3>
           <p>Relax • Islands • Scenic</p>
           <hr>
         </div>
+        </a>
 
         <div class="card">
           <img src="tokyo.jpeg" alt="Tokyo">
