--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <!-- IMPORTANT: Grid container! -->
       <div class="destinations-grid">
-        <a href="#france-card">
+        <a href="#grece-card">
         <div class="card">
           <img src="grece.jpg" alt="Santorin">
           <h3>🇬🇷 Grèce </h3>
