--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
       <!-- IMPORTANT: Grid container! -->
       <div class="destinations-grid">
+
+
         <a href="#grecee-card">
         <div class="card">
           <img src="grece.jpg" alt="Santorin">
@@ -93,7 +95,7 @@
       <!--Booking cards Santorin-->
       <div class="booking-cards">
         
-        <div class="booking-card">
+        <div class="booking-card" id="grecee-card">
           <div class="cards-image">
             <img src="Santorin.jpg" alt="Santorin card">
           </div>
