--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <!--Booking cards Santorin-->
       <div class="booking-cards">
         
-        <div class="booking-card" id="grecee-card-">
+        <div class="booking-card" id="grecee-card">
           <div class="cards-image">
             <img src="Santorin.jpg" alt="Santorin card">
           </div>
