--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
             </div>
 
             <div class="card-rating">
-              <span class="stars"> ★★★★★ </span>
-              <span class="review-count"> (3,521 avis) </span>
+              <span class="stars"> ★★★★☆ </span>
+              <span class="review-count"> (519 avis) </span>
             </div>
 
             <div class="features">
@@ -156,8 +156,8 @@
              </div>
 
             <div class="card-prices">
-              A partir de 1,299$
-              <div class="price-info"> par personne / 10 Nuits </div>
+              A partir de 999$
+              <div class="price-info"> par personne / 5 Nuits </div>
             </div>
 
             <button class="book-button"> Reserver Maintenant -> </button>
