--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@
               A partir de 999$
               <div class="price-info"> par personne / 5 Nuits </div>
             </div>
-
+            <a href="https://www.booking.com/attractions/jp/prpmxzmjwy4a-tokyo-day-tour-in-mt-fuji-lake-ashi-cruise-and-owakudani-cable.fr.html" target="_blank">
             <button class="book-button"> Reserver Maintenant -> </button>
+          </a>
           </div>
         </div>
 
