--- a/index.html
+++ b/index.html
@@ -192,11 +192,12 @@
                 </div>
 
             <div class="card-prices">
-              A partir de 649$
+              A partir de 1072$
               <div class="price-info"> par personne / 5 Nuits </div>
             </div>
-
+            <a href="https://www.booking.com/hotel/ma/sahara-desert-luxury-camp.fr.html" target="_blank">
             <button class="book-button"> Reserver Maintenant -> </button>
+            </a>
           </div>
         </div>
 
