--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </div>
 
             <div class="card-rating">
-              <span class="stars"> ★★★★☆ </span>
+              <span class="stars"> ★★★★★ </span>
               <span class="review-count"> (350 avis) </span>
             </div>
 
