--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
             <div class="card-rating">
               <span class="stars"> ★★★★★ </span>
-              <span class="review-count"> (3,156 avis) </span>
+              <span class="review-count"> (1,643 avis) </span>
             </div>
 
             <div class="features">
@@ -263,11 +263,12 @@
                 </div>    
 
             <div class="card-prices">
-              A partir de 1,799$
+              A partir de 4,433$
               <div class="price-info"> par personne / 7 Nuits </div>
             </div>
-
+            <a href="https://www.booking.com/hotel/mv/royal-island-resort-spa.fr.html" target="_blank">
             <button class="book-button"> Reserver Maintenant -> </button>
+            </a>
           </div>
         </div>
 
