--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
             <div class="card-rating">
               <span class="stars"> ★★★★★ </span>
-              <span class="review-count"> (2,234 avis) </span>
+              <span class="review-count"> (269 avis) </span>
             </div>
 
             <div class="features">
@@ -299,11 +299,12 @@
               </div>
 
             <div class="card-prices">
-              A partir de 1,099$
-              <div class="price-info"> par personne / 6 Nuits </div>
+              A partir de 203$
+              <div class="price-info"> par personne / 1 Nuits </div>
             </div>
-
+            <a href="https://www.booking.com/attractions/ch/pruevsngof4a-interlaken-paragliding-experience.fr.html" target="_blank">
             <button class="book-button"> Reserver Maintenant -> </button>
+            </a>
           </div>
         </div>
 
