--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             
             <div class="card-location">
               <span class="location-icon"> 📍 </span>
-              <span> Paris, France 🇫🇷 </span>
+              <span> Paris, Fr 🇫🇷 </span>
             </div>
 
             <div class="card-rating">
@@ -231,8 +231,9 @@
               A partir de 499$
               <div class="price-info"> par personne / 4 Nuits </div>
             </div>
-
+          <a href="https://www.booking.com/hotel/fr/residence-le-hameau-du-puy.fr.html" target="_blank">
             <button class="book-button"> Reserver Maintenant -> </button>
+          </a>
           </div>
         </div>
 
