--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
             
             <div class="card-location">
               <span class="location-icon"> 📍 </span>
-              <span> Paris, Fr 🇫🇷 </span>
+              <span> Paris, France 🇫🇷 </span>
             </div>
 
             <div class="card-rating">
-              <span class="stars"> ★★★★☆ </span>
-              <span class="review-count"> (4,879 avis) </span>
+              <span class="stars"> ★★★★★ </span>
+              <span class="review-count"> (7,199 avis) </span>
             </div>
 
             <div class="features">
@@ -228,12 +228,12 @@
                </div>
 
             <div class="card-prices">
-              A partir de 499$
-              <div class="price-info"> par personne / 4 Nuits </div>
+              A partir de 56$
+              <div class="price-info"> par personne / 1 Billet </div>
             </div>
-          <a href="https://www.booking.com/hotel/fr/residence-le-hameau-du-puy.fr.html" target="_blank">
+          <a href="https://www.booking.com/attractions/fr/prjyfitkuhfz-one-day-admission-to-disneylandr-paris.fr.html" target="_blank">
             <button class="book-button"> Reserver Maintenant -> </button>
-          </a>
+            </a>
           </div>
         </div>
 
