--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
             <div class="card-rating">
               <span class="stars"> ★★★★★ </span>
-              <span class="review-count"> (7,199 avis) </span>
+              <span class="review-count"> (20,077 avis) </span>
             </div>
 
             <div class="features">
@@ -228,10 +228,10 @@
                </div>
 
             <div class="card-prices">
-              A partir de 56$
+              A partir de 32$
               <div class="price-info"> par personne / 1 Billet </div>
             </div>
-          <a href="https://www.booking.com/attractions/fr/prjyfitkuhfz-one-day-admission-to-disneylandr-paris.fr.html" target="_blank">
+          <a href="https://eiffel-tower.paristickets.com/fr/" target="_blank">
             <button class="book-button"> Reserver Maintenant -> </button>
             </a>
           </div>
