--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       </div>
       <nav>
         <a href="index.html"><b>ACCUEIL</b></a>
-        <a href="#destinations"><b>DESTINATIONS</b></a>
+        <a href="index.html"><b>DESTINATIONS</b></a>
         <a href="contact.html"><b>CONTACT</b></a>        
       </nav>
     </header>
