--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
 
       <!---------------------------------------------------------------------->
       <!--Booking cards Santorin-->
+
+      <div class="pack-part">
+        <h3> Nos meilleures offres de voyage </h3>
+      </div>
       <div class="booking-cards">
         
         <div class="booking-card">
