--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <!--Booking cards Santorin-->
 
       <div class="pack-part">
-        <h3> Nos meilleures offres de voyage </h3>
+        <h3> Nos meilleures offres de voyage !!! </h3>
       </div>
       <div class="booking-cards">
         
