--- a/index.html
+++ b/index.html
@@ -318,8 +318,58 @@
     </main>
 
     <footer id="contact">
-      <h4>Contact</h4>
-      <p>© 2025 Voyages & l'Aventure</p>
-    </footer>
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3> ✈️ Voyages & l'Aventure </h3>
+          <p> Votre partenaire de confiance pour des voyages inoubliables depuis 2010. </p>
+          <div class="socail-links">
+            <a href="#" titile="Facebook"!!></a>
+            <a href="#" titile="Insagram"!!></a>
+            <a href="#" titile="Twitter"!!></a>
+            <a href="#" titile="LinkedIn"!!></a>
+            <a href="#" titile="GitHub"!!></a>
+          </div>
+        </div>
+
+        <div class="footer-content">
+          <h4> Destanations Populaires </h4>
+          <ul>
+            <li> <a href="#destinations">🇬🇷 Grèce </a></li>
+            <li> <a href="#destinations">🇯🇵 Japon </a></li>
+            <li> <a href="#destinations">🇲🇦 Maroc </a></li>
+            <li> <a href="#destinations">🇫🇷 France </a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4> Informations </h4>
+          <ul>
+            <li> <a href="index.html"> A propos </a></li>
+            <li> <a href="destinations"> Nos Forfaits </a></li>
+            <li> <a href="#contact"> Contact </a></li>
+            <li> <a href="#"> Conditions générales </a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4> Contactez-Nous</h4>
+          <ul class="contact-info">
+            <li>📞 +33 1 23 45 67 89</li>
+            <li>📧 info@voyages-aventure.fr</li>
+            <li>📍 Le Mans, France</li>
+            <li>⏰ Lun-Ven: 9h-18h</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-botton">
+        <p> © 2025 Voyages & l'Aventure. Tous droits réservés. </p>
+        <p class="footer-links">
+          <a href="#"> Politique de confidentialité </a>
+          <a href="#"> Mentions légales </a>
+          <a href="#"> Cookies </a>
+        </p>
+      </div>
+        </footer>
   </body>
 </html>
