--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="port_web.CSS">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/12d8937476.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -323,7 +324,9 @@
           <h3> ✈️ Voyages & l'Aventure </h3>
           <p> Votre partenaire de confiance pour des voyages inoubliables depuis 2010. </p>
           <div class="socail-links">
-            <a href="#" titile="Facebook"!!></a>
+            <a href="https://facebook.com">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
             <a href="#" titile="Insagram"!!></a>
             <a href="#" titile="Twitter"!!></a>
             <a href="#" titile="LinkedIn"!!></a>
