--- a/index.html
+++ b/index.html
@@ -324,10 +324,8 @@
           <h3> ✈️ Voyages & l'Aventure </h3>
           <p> Votre partenaire de confiance pour des voyages inoubliables depuis 2010. </p>
           <div class="socail-links">
-            <a href="https://facebook.com">
-              <i class="fa-brands fa-facebook"></i>
-            </a>
-            <a href="#" titile="Insagram"!!></a>
+            <a href="https://facebook.com"> <i class="fa-brands fa-facebook"></i></a>
+            <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
             <a href="#" titile="Twitter"!!></a>
             <a href="#" titile="LinkedIn"!!></a>
             <a href="#" titile="GitHub"!!></a>
