--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
           <div class="socail-links">
             <a href="https://facebook.com"> <i class="fa-brands fa-facebook"></i></a>
             <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#" titile="Twitter"!!></a>
-            <a href="#" titile="LinkedIn"!!></a>
-            <a href="#" titile="GitHub"!!></a>
+            <a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://Github.com"><i class="fa-brands fa-github"></i></a>
+          
           </div>
         </div>
 
