--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3> ✈️ Voyages & l'Aventure </h3>
-          <p> Votre partenaire de confiance pour des voyages inoubliables depuis 2010. </p>
-          <div class="socail-links">
+          <p> Votre partenaire de confiance pour des voyages inoubliables depuis 2025. </p>
+          <div class="social-links">
             <a href="https://facebook.com"> <i class="fa-brands fa-facebook"></i></a>
             <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
@@ -334,7 +334,7 @@
           </div>
         </div>
 
-        <div class="footer-content">
+        <div class="footer-section">
           <h4> Destanations Populaires </h4>
           <ul>
             <li> <a href="#destinations">🇬🇷 Grèce </a></li>
@@ -365,7 +365,7 @@
         </div>
       </div>
 
-      <div class="footer-botton">
+      <div class="footer-bottom">
         <p> © 2025 Voyages & l'Aventure. Tous droits réservés. </p>
         <p class="footer-links">
           <a href="#"> Politique de confidentialité </a>
