--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <!---------------------------------------------------------------------->
       <!--Booking cards Santorin-->
 
-      <div class="pack-part">
+      <div class="pack-part" id="Forfaits">
         <h3> Nos meilleures offres de voyage !!! </h3>
       </div>
       <div class="booking-cards">
@@ -236,7 +236,7 @@
               A partir de 32$
               <div class="price-info"> par personne / 1 Billet </div>
             </div>
-          <a href="https://www.booking.com/attractions/fr/prjyfitkuhfz-one-day-admission-to-disneylandr-paris.fr.html" target="_blank">
+          <a href="https://www.toureiffel.paris/en/rates-opening-times" target="_blank">
             <button class="book-button"> Reserver Maintenant -> </button>
             </a>
           </div>
@@ -348,9 +348,9 @@
           <h4> Informations </h4>
           <ul>
             <li> <a href="index.html"> A propos </a></li>
-            <li> <a href="destinations"> Nos Forfaits </a></li>
+            <li> <a href="#Forfaits"> Nos Forfaits </a></li>
             <li> <a href="#contact"> Contact </a></li>
-            <li> <a href="#"> Conditions générales </a></li>
+            <li> <a href="condition.html"> Conditions générales </a></li>
           </ul>
         </div>
 
