--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           <div class="centre-text">Explorez le Monde Sans Limites</div> 
           <div class="centre-text-2">Votre Aventure Commence Ici</div>
         </div>
+        <a href="#Forfaits">
         <button class="get-started"><b>Découvrez nos Destinations</b></button>
+      </a>
       </section>
 
       <!-- Destinations Section -->
