--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <title>Voyages & l'Aventure</title>
     <meta charset="utf-8">
@@ -32,8 +32,8 @@
           <div class="centre-text">Explorez le Monde Sans Limites</div> 
           <div class="centre-text-2">Votre Aventure Commence Ici</div>
         </div>
-        <a href="#Forfaits">
-        <button class="get-started"><b>Découvrez nos Destinations</b></button>
+        <a href="#Forfaits" class="get-started">
+          <b>Découvrez nos Destinations</b>
       </a>
       </section>
 
@@ -70,7 +70,7 @@
         </div>
 
         <div class="card">
-          <img src="France .jpeg" alt="Paris">
+          <img src="France.jpeg" alt="Paris">
           <h3>🇫🇷 FRANCE</h3>
           <p>Culture • Streets • Relax</p>
           <hr>
@@ -92,11 +92,11 @@
       </div>
       <hr>
 
-      <!---------------------------------------------------------------------->
+      <!-- =========================================== -->
       <!--Booking cards Santorin-->
 
       <div class="pack-part" id="Forfaits">
-        <h3> Nos meilleures offres de voyage !!! </h3>
+        <h2> Nos meilleures offres de voyage !!! </h2>
       </div>
       <div class="booking-cards">
         
@@ -131,7 +131,7 @@
               <div class="price-info"> par personne / 7 Nuits </div>
             </div>
             <a href="https://www.booking.com/hotel/gr/athina-luxury-suites.fr.html" target="_blank">
-            <button class="book-button"> Reserver Maintenant -> </button> 
+             Reserver Maintenant ->
             </a>
           </div>
         </div>
