--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="card">
-          <img src="France.jpeg" alt="Paris">
+          <img src="Francee.jpeg" alt="Paris">
           <h3>🇫🇷 FRANCE</h3>
           <p>Culture • Streets • Relax</p>
           <hr>
