Fix case of CSS file reference in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Voyages & l'Aventure</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="port_web.CSS">
+    <link rel="stylesheet" href="port_web.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/12d8937476.js" crossorigin="anonymous"></script>
   </head>
